language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_value_with_import_alias_and_other_imported_items.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport wibble.{Wibble as Wobble, type Wibble as Wobble}\n\npub fn main() -> Wobble {\n  Wobble\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{Wibble as Wobble, type Wibble as Wobble}

pub fn main() -> Wobble {
  Wobble
  ↑▔▔▔▔▔
}


----- AFTER RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{Wibble as Wubble, type Wibble as Wobble}

pub fn main() -> Wobble {
  Wubble
}
