language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_value_with_same_named_import_alias.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble {\n  Wibble\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam

import app.{Wibble as Wibble}

pub fn go() {
  Wibble
}


-- app.gleam

pub type Wibble {
  Wibble
  ↑▔▔▔▔▔
}


----- AFTER RENAME
-- wibble.gleam

import app.{Wobble as Wibble}

pub fn go() {
  Wobble
}


-- app.gleam

pub type Wibble {
  Wobble
}
