language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_value_with_same_named_import_alias_and_other_import.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble {\n  Wibble\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam

import app.{type Wibble as Wibble, Wibble as Wibble}

pub fn go() -> Wibble {
  Wibble
}


-- app.gleam

pub type Wibble {
  Wibble
  ↑▔▔▔▔▔
}


----- AFTER RENAME
-- wibble.gleam

import app.{type Wibble as Wibble, Wobble as Wibble}

pub fn go() -> Wibble {
  Wobble
}


-- app.gleam

pub type Wibble {
  Wobble
}
