language-server/src/tests/snapshots/gleam_language_server__tests__rename__type_variable_in_separate_function_is_not_renamed.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn first(a: wibble, b: wobble) -> wibble {\n  a\n}\n\npub fn an_unrelated_function(a: wibble, b: wibble) -> wibble {\n  a\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn first(a: wibble, b: wobble) -> wibble {
                ↑▔▔▔▔▔                        
  a
}

pub fn an_unrelated_function(a: wibble, b: wibble) -> wibble {
  a
}


----- AFTER RENAME
-- app.gleam

pub fn first(a: value, b: wobble) -> value {
  a
}

pub fn an_unrelated_function(a: wibble, b: wibble) -> wibble {
  a
}
